# directories

./: .gitignore  CHANGES.md  LICENSE.md  README.md  directories.opam  directories_macos.opam  dune-project  shell.nix
.github/workflows/: build.yml
example/: dune  print_dir.ml  quick_start.ml
src/: common.ml  directories.linux.ml  directories.macos.ml  directories.mli  directories.unknown.ml  directories.windows.ml  directories_common.ml  directories_linux.ml  directories_macos.ml  directories_windows.ml  dune  linux.ml  macos.ml  windows.ml
src/linux/: directories.ml
src/macos/: directories.ml
src/windows/: directories.ml
src/windows/bindings/: dune  gen_functions.ml  win_functions.ml  win_functions_functor.ml  win_types.ml
