opam-version: "2.0"
synopsis: "Directories"
description: "directories"
homepage: "https://github.com/ocamlpro/directories"
bug-reports: "https://github.com/ocamlpro/directories/issues"
authors: "OCamlPro <contact@ocamlpro.com>"
maintainer: "OCamlPro <contact@ocamlpro.com>"
depends: [
  "dune" {>= "2.0"}
  "ocaml" {>= "4.07.0" & (os = "win32" | os = "cygwin")}
  "ctypes-foreign" {>= "0.4.0" & (os = "win32" | os = "cygwin")}
  "ctype" {>= "0.17.1"}
]
build: [
  ["dune" "subst"] {pinned}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
