(library
 (public_name directories_common)
 (libraries unix)
 (modules common))

(library
 (name directories_linux)
 (libraries directories_common)
 (enabled_if
  (= %{os_type} Unix))
 (implements directories)
 (modules directories_linux))

(library
 (name directories_macos)
 (libraries directories_common)
 (enabled_if
  (= %{os_type} Macos))
 (implements directories)
 (modules directories_macos))

(library
 (name directories_windows)
 (libraries directories_common ctypes ctypes.foreign)
 (enabled_if
  (= %{os_type} Win32))
 (implements directories)
 (modules directories_windows))

(library
 (public_name directories)
 (modules directories)
 (virtual_modules directories_impl)
 (wrapped false)
 (libraries unix))
